// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: table;
  margin: 16px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-0>div>div {
  width: unset;
}

.emotion-0 button>div>div {
  font-size: 16px;
}

.emotion-0>div {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.emotion-1 {
  border: 1px solid #E7EEEC;
  border-bottom: none;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
}

.emotion-3 {
  padding: 10px;
  color: #5D6C74;
  font-size: 14px;
  margin-left: 5px;
  border-bottom: none;
}

.emotion-4 {
  border: 1px solid #E7EEEC;
  border-radius: 4px;
  overflow: hidden;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  border: 2px solid;
  overflow-x: auto;
  border-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  white-space: pre;
  border-color: #E7EEEC;
  background-color: #F9FBFA;
  color: #061621;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-6 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-6 {
    white-space: pre;
  }
}

.emotion-7 {
  color: inherit;
  font-size: 13px;
  font-family: 'Source Code Pro',Menlo,monospace;
  line-height: 24px;
}

.emotion-8 {
  border-spacing: 0;
  width: 100%;
}

.emotion-9 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-12 {
  width: 38px;
  border-left: solid 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-top: 6px;
  min-height: 36px;
  padding-top: 4px;
  border-color: #E7EEEC;
  background-color: white;
}

<div
    class="emotion-0"
  >
    <div>
      <div
        class="emotion-1 emotion-2"
      >
        <div
          class="emotion-3"
        >
          Test Caption
        </div>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      >
        <pre
          class="emotion-6"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light emotion-7 javascript"
          >
            <table
              class="emotion-8"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                    mongoimport --db test --collection inventory ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                              --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-9"
                  >
                              --drop --file ~\\downloads\\inventory.crud.json
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-12"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when none is passed in as a language 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-2 {
  color: inherit;
  font-size: 13px;
  font-family: 'Source Code Pro',Menlo,monospace;
  line-height: 24px;
}

.emotion-6 {
  border: 1px solid #E7EEEC;
  border-radius: 4px;
  overflow: hidden;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  border-spacing: 0;
  width: 100%;
}

.emotion-3 {
  border: 2px solid;
  overflow-x: auto;
  border-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  white-space: pre;
  border-color: #E7EEEC;
  background-color: #F9FBFA;
  color: #061621;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 6px;
  padding-bottom: 6px;
}

@media only screen and (max-device-width:812px) and (-webkit-min-device-pixel-ratio:2) {
  .emotion-3 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width:813px) and (-webkit-min-device-pixel-ratio:2) {
  .emotion-3 {
    white-space: pre;
  }
}

.emotion-4 {
  width: 38px;
  border-left: solid 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding-top: 6px;
  min-height: 36px;
  padding-top: 4px;
  min-height: 36px;
  padding-top: 4px;
  border-color: #E7EEEC;
  background-color: white;
}

.emotion-7 {
  display: table;
  margin: 16px 0;
  min-width: 150px;
  table-layout: fixed;
  width: 100%;
}

.emotion-7 > div > div {
  width: unset;
}

.emotion-7 button > div > div {
  font-size: 16px;
}

.emotion-7 > div {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <pre
          class="emotion-3"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light emotion-2 none"
          >
            <table
              class="emotion-1"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-0"
                  >
                    [{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-4"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
